--- a/BetterGoalTriggers/BetterGoalTriggers.csproj
+++ b/BetterGoalTriggers/BetterGoalTriggers.csproj
@@ -1,9 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <AssemblyName>oomtm450PuckMod_Template</AssemblyName>
+    <AssemblyName>oomtm450PuckMod_BetterGoalTriggers</AssemblyName>
     <TargetFramework>net4.8</TargetFramework>
-    <Version>0.1.0</Version>
+    <Version>1.0.0</Version>
+    <RootNamespace>oomtm450PuckMod_BetterGoalTriggers</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -451,17 +452,5 @@
       <HintPath>G:\SteamLibrary\steamapps\common\Puck\Puck_Data\Managed\uPnP.dll</HintPath>
     </Reference>
   </ItemGroup>
-
-  <!-- Streamline development and move the built .dll to the plugins folder after building -->
-  <!-- <Target Name="PostBuildMoveDll" AfterTargets="Build">
-    <PropertyGroup>
-      <TargetDir>C:\Your\Puck\Plugins\GAFURIXCustomMOTD</TargetDir>
-    </PropertyGroup>
-
-    <MakeDir Directories="$(TargetDir)" />
-    <Copy SourceFiles="$(OutputPath)$(AssemblyName).dll" DestinationFolder="$(TargetDir)" OverwriteReadOnlyFiles="true" />
-    
-    <Message Importance="high" Text="Copied $(AssemblyName).dll to $(TargetDir)" />
-  </Target> -->
 
 </Project>
